--- a/almond/build.yaml
+++ b/almond/build.yaml
@@ -3,8 +3,6 @@ build_from:
   aarch64: ghcr.io/home-assistant/aarch64-base-debian:buster
   amd64: ghcr.io/home-assistant/amd64-base-debian:buster
   armv7: ghcr.io/home-assistant/armv7-base-debian:buster
-codenotary:
-  signer: notary@home-assistant.io
-  base_image: notary@home-assistant.io
 args:
-  ALMOND_VERSION: v2.0.1
+  GENIE_SERVER_VERSION: v3.0.1-rc.1
+  GENIE_CLIENT_VERSION: v0.1.0-rc.1
