--- a/letsencrypt/build.yaml
+++ b/letsencrypt/build.yaml
@@ -14,3 +14,4 @@ args:
   CERTBOT_NETCUP_VERSION: 1.1.1
   CERTBOT_NJALLA_VERSION: 1.0.0
   CERTBOT_VERSION: 1.21.0
+  CERTBOT_DNS_IONOS_VERSION: 2021.9.20.post1
