--- a/nginx_proxy/data/nginx.conf
+++ b/nginx_proxy/data/nginx.conf
@@ -15,9 +15,11 @@ http {
     server_tokens off;
 
     server_names_hash_bucket_size 64;
-	
+
     #include /data/cloudflare.conf;
-	
+
+    #include /data/remotes_allowlist.conf;
+
     server {
         server_name _;
         listen 80 default_server;
@@ -49,13 +51,15 @@ http {
 
         listen 443 ssl http2;
         %%HSTS%%
-        
+
         # intermediate configuration
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
         ssl_prefer_server_ciphers off;
 
         proxy_buffering off;
+
+        %%ALLOWLIST_IF%%
 
         #include /share/nginx_proxy_default*.conf;
 
