--- a/dhcp_server/config.yaml
+++ b/dhcp_server/config.yaml
@@ -1,4 +1,4 @@
-version: "1.2"
+version: "1.3"
 slug: dhcp_server
 name: DHCP server
 description: A simple DHCP server
@@ -17,6 +17,7 @@ options:
   dns:
     - 8.8.8.8
     - 8.8.4.4
+  ntp: []
   domain: null
   hosts: []
   max_lease: 172800
@@ -31,6 +32,8 @@ options:
 schema:
   default_lease: int
   dns:
+    - str
+  ntp:
     - str
   domain: str
   hosts:
