--- a/deconz/config.yaml
+++ b/deconz/config.yaml
@@ -2,7 +2,7 @@
 version: 6.12.0
 slug: deconz
 name: deCONZ
-description: >
+description: >-
   Control a Zigbee network with ConBee or RaspBee by Dresden Elektronik.
 url: https://github.com/home-assistant/hassio-addons/tree/master/deconz
 apparmor: false
