--- a/duckdns/config.yaml
+++ b/duckdns/config.yaml
@@ -2,7 +2,7 @@
 version: 1.14.0
 slug: duckdns
 name: Duck DNS
-description: >
+description: >-
   Free Dynamic DNS (DynDNS or DDNS) service with Let's Encrypt support
 url: https://github.com/home-assistant/hassio-addons/tree/master/duckdns
 arch:
