--- a/google_assistant/config.yaml
+++ b/google_assistant/config.yaml
@@ -3,7 +3,7 @@ version: 2.5.0
 slug: google_assistant
 name: Google Assistant SDK
 description: A virtual personal assistant developed by Google
-url: >
+url: >-
   https://github.com/home-assistant/hassio-addons/tree/master/google_assistant
 advanced: true
 arch:
