--- a/letsencrypt/Dockerfile
+++ b/letsencrypt/Dockerfile
@@ -25,6 +25,7 @@ RUN \
         cargo \
     && pip3 install --no-cache-dir --find-links \
         "https://wheels.home-assistant.io/alpine-$(cut -d '.' -f 1-2 < /etc/alpine-release)/${BUILD_ARCH}/" \ 
+        cryptography==37.0.0 \
         certbot==${CERTBOT_VERSION} \
         certbot-dns-cloudflare==${CERTBOT_VERSION} \
         certbot-dns-cloudxns==${CERTBOT_VERSION} \
