Add flags for linker before make
https://github.com/iegomez/mosquitto-go-auth/issues/91#issuecomment-826943411

--- a/mosquitto/Dockerfile
+++ b/mosquitto/Dockerfile
@@ -20,6 +20,7 @@ RUN apk add --no-cache \
        https://github.com/iegomez/mosquitto-go-auth \
     \
     && cd mosquitto-go-auth \
+    && sed '/LDFLAGS :=/ s/$/ -Wl,-unresolved-symbols=ignore-all/' Makefile \
     && make \
     && mkdir -p /usr/share/mosquitto \
     && cp -f go-auth.so /usr/share/mosquitto \
