--- a/ssh/config.yaml
+++ b/ssh/config.yaml
@@ -1,9 +1,10 @@
 ---
-version: 9.3.0
+version: 9.4.0
 slug: ssh
 name: Terminal & SSH
 description: Allow logging in remotely to Home Assistant using SSH
 url: https://github.com/home-assistant/hassio-addons/tree/master/ssh
+codenotary: notary@home-assistant.io
 advanced: true
 arch:
   - armhf
