--- a/mosquitto/config.yaml
+++ b/mosquitto/config.yaml
@@ -4,6 +4,7 @@ slug: mosquitto
 name: Mosquitto broker
 description: An Open Source MQTT broker
 url: https://github.com/home-assistant/hassio-addons/tree/master/mosquitto
+codenotary: notary@home-assistant.io
 arch:
   - armhf
   - armv7
