--- a/mosquitto/config.yaml
+++ b/mosquitto/config.yaml
@@ -1,9 +1,10 @@
 ---
-version: 6.0.2
+version: 6.1.0
 slug: mosquitto
 name: Mosquitto broker
 description: An Open Source MQTT broker
 url: https://github.com/home-assistant/hassio-addons/tree/master/mosquitto
+codenotary: notary@home-assistant.io
 arch:
   - armhf
   - armv7
