--- a/mosquitto/config.yaml
+++ b/mosquitto/config.yaml
@@ -1,5 +1,5 @@
 ---
-version: 6.1.1
+version: 6.1.2
 slug: mosquitto
 name: Mosquitto broker
 description: An Open Source MQTT broker
@@ -42,6 +42,7 @@ schema:
   customize:
     active: bool
     folder: str
+  debug: bool?
 services:
   - mqtt:provide
 startup: system
