--- a/duckdns/config.yaml
+++ b/duckdns/config.yaml
@@ -1,5 +1,5 @@
 ---
-version: 1.14.0
+version: 1.15.0
 slug: duckdns
 name: Duck DNS
 description: >-
@@ -12,6 +12,7 @@ arch:
   - amd64
   - i386
 hassio_api: true
+init: false
 image: homeassistant/{arch}-addon-duckdns
 map:
   - ssl:rw
