Samba: Don't mangle names by default

--- a/samba/config.yaml
+++ b/samba/config.yaml
@@ -1,5 +1,5 @@
 ---
-version: 9.7.0
+version: 10.0.0 
 slug: samba
 name: Samba share
 description: Expose Home Assistant folders with SMB/CIFS
@@ -43,6 +43,7 @@ schema:
   password: password
   workgroup: str
   compatibility_mode: bool
+  mangled_names: bool?
   veto_files:
     - str
   allow_hosts:
