--- a/nginx_proxy/config.yaml
+++ b/nginx_proxy/config.yaml
@@ -1,5 +1,5 @@
 ---
-version: 3.1.3
+version: 3.1.4
 hassio_api: true
 slug: nginx_proxy
 name: NGINX Home Assistant SSL proxy
@@ -12,6 +12,7 @@ arch:
   - amd64
   - i386
 image: homeassistant/{arch}-addon-nginx_proxy
+init: false
 map:
   - ssl
   - share
