Codenotary not a boolean

--- a/zwave_js/config.yaml
+++ b/zwave_js/config.yaml
@@ -10,7 +10,7 @@ arch:
   - armhf
   - armv7
   - aarch64
-codenotary: true
+codenotary: notary@home-assistant.io
 discovery:
   - zwave_js
 hassio_api: true
