--- a/mariadb/config.yaml
+++ b/mariadb/config.yaml
@@ -10,8 +10,8 @@ arch:
   - aarch64
   - amd64
   - i386
-backup_post: /bin/s6-svc -wd -d /run/s6/services/mariadb-lock/
-backup_pre: /bin/s6-svc -wU -u /run/s6/services/mariadb-lock/
+backup_post: s6-svc -wd -d /run/s6/services/mariadb-lock/
+backup_pre: s6-svc -wU -u /run/s6/services/mariadb-lock/
 image: homeassistant/{arch}-addon-mariadb
 init: false
 options:
