--- a/mariadb/config.yaml
+++ b/mariadb/config.yaml
@@ -1,5 +1,5 @@
 ---
-version: 2.4.0
+version: 2.5.0
 slug: mariadb
 name: MariaDB
 description: A SQL database server
@@ -10,8 +10,8 @@ arch:
   - aarch64
   - amd64
   - i386
-backup_post: /bin/s6-svc -wd -d /run/s6/services/mariadb-lock/
-backup_pre: /bin/s6-svc -wU -u /run/s6/services/mariadb-lock/
+backup_post: s6-svc -wd -d /run/s6/legacy-services/mariadb-lock/
+backup_pre: s6-svc -wU -u /run/s6/legacy-services/mariadb-lock/
 image: homeassistant/{arch}-addon-mariadb
 init: false
 options:
