--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -105,7 +105,7 @@ body:
     attributes:
       label: Anything in the Supervisor logs that might be useful for us?
       description: >
-        The Supervisor logs can be found in the [System panel -> Logs -> Supervisor](https://my.home-assistant.io/redirect/logs/).
+        The Supervisor logs can be found in the [Settings panel -> System -> Logs -> Supervisor](https://my.home-assistant.io/redirect/logs/).
       render: txt
 
   - type: textarea
