--- a/dnsmasq/config.yaml
+++ b/dnsmasq/config.yaml
@@ -1,5 +1,5 @@
 ---
-version: 1.4.4
+version: 1.5.0
 slug: dnsmasq
 name: Dnsmasq
 description: A simple DNS server
@@ -38,4 +38,7 @@ schema:
       priority: int
       srv: str
       weight: int
+  cnames:
+    - name: str
+      target: str
 startup: system
