--- a/dnsmasq/config.yaml
+++ b/dnsmasq/config.yaml
@@ -1,5 +1,5 @@
 ---
-version: 1.5.0
+version: 1.5.1
 slug: dnsmasq
 name: Dnsmasq
 description: A simple DNS server
@@ -20,6 +20,7 @@ options:
   forwards: []
   hosts: []
   services: []
+  cnames: []
 ports:
   53/tcp: 53
   53/udp: 53
